Fix list alignment bug #5

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -228,3 +228,5 @@ blockquote {
 // .context.example{
 //   height: 100%;
 // }
+
+li > p { display: inline; }
